--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
 
         <activity android:name=".ThreeActivity"
             android:screenOrientation="portrait"/>
+
+        <activity android:name=".FourthActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
